--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="DeepPink">#3F51B5</color>
+    <color name="colorPrimary">#FF1493</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color">#FFCCCC</color>
-    <color name="cologreen">#33FFCC</color>
+    <color name="green">#33FFCC</color>
+    <color name="Cyan">#FFC0CB</color>
+    <color name="WhiteSmoke">#FFE4E1</color>
 
 </resources>
